--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b4895fab6a.js" crossorigin="anonymous"></script>
+
     <title>splitbill</title>
   </head>
   <body>
